--- a/conociendote.html
+++ b/conociendote.html
@@ -183,10 +183,9 @@
     </nav>
 		<main>
         <section>  
-            <p>Brackets es un editor de código abierto de HTML y CSS. Lo descubrí gracias a mi profesor de web, Antonio Elías, en el Máster de Marketing, Publicidad y Diseño que he cursado durante 2018/2019. Y en este post te voy a contar cómo descargar este editor HTML, así como primeras configuraciones, extensiones interesantes y alguna cosillas más.
-Antes, un poco de historia. Resulta que el programa Brackets tiene su semilla en el Adobe Edge Code que Adobe sacó como alternativa a otros editores que los usuarios estaban empezando a usar, desplazando así a su conocido Dreamweaver (que seguro que muchos de los que leáis este post habréis usado, como yo lo hice en su momento, y estaréis de acuerdo conmigo que era un poco patata).
-La cuestión es que a través del trabajo que se estaba haciendo en este editor de texto open code, surgió una comunidad que se llamó Brackets y que fue trabajando en paralelo a Edge. Al final, Adobe dejó su propio editor de lado, y se unió a Brackets.
-            </p>
+            <p>
+		    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla id metus placerat, pharetra dolor a, posuere massa. Nulla facilisi. Integer nunc lorem, sodales condimentum faucibus a, gravida sed purus. Nulla consectetur eget lorem ut scelerisque. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce in fermentum nunc, at ultricies quam. Suspendisse at sapien dignissim augue viverra ultricies. Duis suscipit sollicitudin leo, non dictum quam feugiat vitae. Duis interdum tortor ut elit pharetra, vel ultricies magna porta. Ut nec nisi consectetur, vehicula sapien quis, tincidunt tellus. Phasellus vel mauris vel magna pulvinar sollicitudin. Nulla lorem leo, eleifend ut hendrerit at, molestie id odio.
+	    </p>
             <form method="get" action="mi primera pagina">
                 <label for="nombre"> Nombre:</label>
                 <input type="text" name="nombre" id="nombre">
