--- a/html/conociendote.html
+++ b/html/conociendote.html
@@ -183,9 +183,27 @@
     </nav>
 		<main>
         <section>  
-            <p>
-		Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla id metus placerat, pharetra dolor a, posuere massa. Nulla facilisi. Integer nunc lorem, sodales condimentum faucibus a, gravida sed purus. Nulla consectetur eget lorem ut scelerisque. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce in fermentum nunc, at ultricies quam. Suspendisse at sapien dignissim augue viverra ultricies. Duis suscipit sollicitudin leo, non dictum quam feugiat vitae. Duis interdum tortor ut elit pharetra, vel ultricies magna porta. Ut nec nisi consectetur, vehicula sapien quis, tincidunt tellus. Phasellus vel mauris vel magna pulvinar sollicitudin. Nulla lorem leo, eleifend ut hendrerit at, molestie id odio.
-	    </p>
+           <p>
+		   Aquí una canción que me gusta mucho
+Jimin -Promise
+
+Estoy sentado, desolado, mis pensamientos se pierden más
+¿Desde cuándo comenzaste a hacerme daño?
+Pues tú tampoco lo sabes, tú también estás herida, porque eres mía, solo quiero sorprenderte, así solo te estás alejando aún más
+Digo que todo está bien pero honestamente puede que no esté diciendo la verdad
+
+Quiero que seas tu propia luz, amor, deberías ser tu luz para que así no te hagas más daño, para que así puedas sonreír, quiero que seas tu noche, amor
+Podrías ser tu noche, para que pueda ser honesto contigo esta noche
+
+Tú también estás herida, porque eres mía, solo quiero sorprenderte, así solo te estás alejando aún más
+Digo que todo está bien,pero honestamente puede que no esté diciendo la verdad, oh
+
+Quiero que seas tu propia luz, amor, deberías ser tu luz para que así no te hagas más daño, para que así puedas sonreír, quiero que seas tu noche, amor
+Podrías ser tu noche para que pueda ser honesto contigo esta noche
+
+Ahora prométemelo, varias veces al día, aunque te sientas sola, no te deshagas de ti, espera un momento
+Enlacemos nuestros dedos meñiques y prométemelo ahora.
+	   </p>
             <form method="get" action="mi primera pagina">
                 <label for="nombre"> Nombre:</label>
                 <input type="text" name="nombre" id="nombre">
